# sophos-archaeologist

./: extract_iocs_from_sophos_artifacts.py  pyproject.toml
